Fix fate probability computation

--- a/sctalk3_cellrank2/cellrank2_tutorial.ipynb
+++ b/sctalk3_cellrank2/cellrank2_tutorial.ipynb
@@ -862,10 +862,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drivers_sp = g3.compute_lineage_drivers(\n",
-    "    lineages=g3.terminal_states.cat.categories.tolist(),\n",
-    "    return_drivers=True,\n",
-    ")\n",
+    "lineages_sp = g3.terminal_states.cat.categories.tolist()\n",
+    "\n",
+    "try:\n",
+    "    drivers_sp = g3.compute_lineage_drivers(\n",
+    "        lineages=lineages_sp,\n",
+    "        return_drivers=True,\n",
+    "    )\n",
+    "except RuntimeError as e:\n",
+    "    if \"stationary distribution\" in str(e):\n",
+    "        g3.compute_eigendecomposition(k=20)\n",
+    "        drivers_sp = g3.compute_lineage_drivers(\n",
+    "            lineages=lineages_sp,\n",
+    "            return_drivers=True,\n",
+    "        )\n",
+    "    else:\n",
+    "        raise\n",
+    "\n",
     "drivers_sp.head(10)"
    ]
   },
