Display matrix selections

--- a/sctalk3_cellrank2/cellrank2_tutorial.ipynb
+++ b/sctalk3_cellrank2/cellrank2_tutorial.ipynb
@@ -1023,7 +1023,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rtk.plot_projection(basis=\"umap\", color=\"cell_type\")"
+    "larry_color = \"cell_type\" if \"cell_type\" in adata_larry.obs.columns else \"day\"\n",
+    "if \"connectivities\" not in adata_larry.obsp:\n",
+    "    sc.pp.neighbors(adata_larry)\n",
+    "\n",
+    "rtk.plot_projection(\n",
+    "    basis=\"umap\",\n",
+    "    color=larry_color,\n",
+    "    connectivities=adata_larry.obsp[\"connectivities\"],\n",
+    ")"
    ]
   },
   {
